--- a/main.css
+++ b/main.css
@@ -2,36 +2,146 @@
   font-family: "Montserrat", sans-serif;
 }
 
-#navbar {
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+/* navigation menu style */
+
+#navbar ul {
   width: auto;
   height: 200px;
   position: relative;
-  top: 30px;
+  top: 20px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  font-weight: 300;
+}
+
+#navbar-logo {
+  flex: 2;
+}
+
+#navbar-middle {
+  width: 100%;
+  position: relative;
+  top: 15px;
+  left: -120px;
+  display: flex;
+  flex: 2;
 }
 
 #navbar-logo img {
   width: 120px;
   height: 60px;
-  flex: 3;
 }
 
 #navbar-features,
 #navbar-aboutUs,
 #navbar-pricing,
-#navbar-Feedback {
+#navbar-feedback {
   flex: 1;
+  margin-left: 20px;
 }
 
-#navbar-middleButtons {
+#navbar-features a,
+#navbar-aboutUs a,
+#navbar-pricing a,
+#navbar-feedback a {
+  color: rgb(44, 44, 44);
+  font-weight: 500;
+}
+
+#navbar-button {
+  text-align: center;
+  padding-top: 8px;
+  max-width: 200px;
+  min-width: 200px;
+  height: 30px;
+  position: relative;
+  top: 3px;
+  flex: 1;
+  border: 0.5px solid rgb(155, 139, 243);
+  background-color: rgb(113, 91, 238);
+  border-radius: 5px;
+}
+
+#navbar-button a {
+  color: #ffff;
+}
+
+/* Web & Mobile Design Development */
+
+#mobileDesign {
   width: 500px;
-  height: 50px;
-  display: flex;
-  flex: 1;
+  height: 300px;
+  font-size: 70px;
+  position: relative;
+  left: 50px;
 }
 
-#navbar-requestButton {
-  flex: 3;
+#mobileDesign img {
+  width: 110px;
+  height: 100px;
+  position: relative;
+  top: -250px;
+  left: 230px;
 }
+
+#helpsYou {
+  color: rgb(190, 190, 190);
+  position: relative;
+  top: -200px;
+  font-size: 20px;
+  width: 600px;
+}
+
+#tryFreeDemo {
+  text-align: center;
+  padding-top: 12px;
+  width: 200px;
+  height: 30px;
+  position: relative;
+  left: 50px;
+  top: 3px;
+  border: 0.5px solid rgb(155, 139, 243);
+  background-color: rgb(113, 91, 238);
+  border-radius: 5px;
+}
+
+#tryFreeDemo a {
+  color: #ffff;
+}
+
+#web-ios-android {
+  color: rgb(161, 161, 161);
+  position: relative;
+  top: -50px;
+  left: 312px;
+  font-size: 20px;
+  width: 600px;
+}
+
+#dropdown-menu {
+  display: none;
+  min-width: 160px;
+}
+
+#dropdown-menu a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  padding-top: 15px;
+}
+
+#tryFreeDemo:hover #dropdown-menu {
+  display: block;
+}
+
+/* Our Process, Daily Standup, Weekly syn meeting, User Testing */
