--- a/layout.css
+++ b/layout.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 *,
-*::before,
-*::after {
+*::after,
+*::before {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -10,9 +10,30 @@
 }
 
 :root {
-  --primary-clr: rgb(120, 84, 247);
-  --dark-clr: rgb(48, 48, 48);
-  --light-clr: rgb(255, 255, 255);
+  --primary-color: #7854f7;
+  --dark-color: #181131;
+  --accent-color: #d57d00;
+  --light-color: #f7f7f7;
+  --secondary-color: #515151;
+  --border-raduis-sm: 0.5rem;
+  --border-raduis-md: 1rem;
+  --border-raduis-lg: 1.5rem;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: "Poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-size: 1.5rem;
+  background: linear-gradient(141deg, #fff 0%, #f7f7f7 51%, #f2f2f2 75%);
+}
+
+button {
+  cursor: pointer;
+  font-family: inherit;
 }
 
 ul {
@@ -23,28 +44,12 @@ a {
   text-decoration: none;
 }
 
-html {
-  font-size: 62.5%;
-  font-family: "Montserrat", sans-serif;
-  scroll-behavior: smooth;
-  background: linear-gradient(141deg, #fff 0%, #f7f7f7 51%, #fff 75%);
-}
-
-body {
-  font-size: 1.5rem;
-}
-
-button {
-  font: inherit;
-  cursor: pointer;
-}
-
 .container {
   width: 100%;
   margin-right: auto;
   margin-left: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+
+  padding: 0 1rem;
 }
 
 .btn {
@@ -52,20 +57,20 @@ button {
   padding: 1rem 1.5rem;
   border-radius: 0.5rem;
   outline: 0;
-  transition: all 0.3s ease;
   border: none;
   box-shadow: none;
+  transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
 }
 
 .btn__primary {
-  background-color: var(--primary-clr);
-  color: var(--light-clr);
-  transition: all 0.3s ease;
+  background-color: var(--primary-color);
+  color: var(--light-color);
 }
 
 .btn__primary:hover {
   background: transparent;
-  color: var(--dark-clr);
-  box-shadow: inset 0 0 0 0.1rem var(--primary-clr);
+  color: var(--dark-color);
+
+  box-shadow: inset 0 0 0 0.2rem var(--primary-color);
 }
