--- a/layout.css
+++ b/layout.css
@@ -15,9 +15,9 @@
   --accent-color: #d57d00;
   --light-color: #f7f7f7;
   --secondary-color: #515151;
-  --border-raduis-sm: 0.5rem;
-  --border-raduis-md: 1rem;
-  --border-raduis-lg: 1.5rem;
+  --border-radius-sm: 0.5rem;
+  --border-radius-md: 1rem;
+  --border-radius-lg: 1.5rem;
 }
 
 html {
@@ -28,7 +28,12 @@ html {
 
 body {
   font-size: 1.5rem;
-  background: linear-gradient(141deg, #fff 0%, #f7f7f7 51%, #f2f2f2 75%);
+  background: linear-gradient(
+    141deg,
+    rgb(255, 255, 255) 0%,
+    #f7f7f7 51%,
+    #f2f2f2 75%
+  );
 }
 
 button {
