--- a/style.css/hero.css
+++ b/style.css/hero.css
@@ -7,25 +7,26 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  margin: 12rem 2rem 1rem 0;
 }
 
-.hero__left--item {
+.hero__item--left {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
 }
-.hero__left--item h1 {
-  font-size: 7.5rem;
+.hero__item--left h1 {
+  font-size: var(--font-xxl);
   font-weight: 700;
   color: var(--dark-color);
   margin-bottom: 2.5rem;
   line-height: 8rem;
 }
 
-.hero__left--item p {
+.hero__item--left p {
   color: var(--secondary-color);
-  font-size: 2rem;
+  font-size: var(--font-m);
 }
 
 .left--item__demo {
@@ -42,6 +43,7 @@
   margin: 0 1rem;
 }
 
-.hero__right--item {
+.hero__item--right img{
   opacity: 0.9rem;
+  height: 50rem;
 }
