--- a/style.css/layout.css
+++ b/style.css/layout.css
@@ -18,6 +18,12 @@
   --border-radius-sm: 0.5rem;
   --border-radius-md: 1rem;
   --border-radius-lg: 1.5rem;
+
+  --font-s: 1.5rem;
+  --font-m: 2rem;
+  --font-l: 3rem;
+  --font-xl: 4rem;
+  --font-xxl: 7rem;
 }
 
 html {
