--- a/style.css/navbar.css
+++ b/style.css/navbar.css
@@ -26,13 +26,14 @@
 }
 
 .nav__link {
-  color: var(--dark-clr);
+  color: var(--dark-color);
   transition: all 0.3s ease-in-out;
 }
 
 .nav__link:hover {
-  color: var(--primary-clr);
+  color: var(--primary-color);
 }
+
 #header {
   min-height: 10vh;
 }
@@ -56,15 +57,32 @@
   align-items: center;
 }
 
+
 .nav__list {
   margin: 0 0.5rem;
-}
-
-.nav__link {
   color: var(--dark-color);
-  transition: all 0.4s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  font-size: var(--font-m);
 }
 
-.nav__link:hover {
+.nav__list:hover {
   color: var(--primary-color);
+  /* box-shadow:  -0.1rem 0rem 1rem 0rem var(--dark-color); */
+  /* border-block-end: 1px solid var(--dark-color); */
+  transform: translateY(-0.2rem);
+
+}
+
+.nav__list:hover::after{
+  width:100%
+
+}
+
+.nav__list::after{
+  content: " ";
+  display: block;
+  background-color: var(--primary-color);
+  transition: all 0.2s linear;
+  width: 0%;
+  height: 0.1rem;
 }
