--- a/style.css/signup.css
+++ b/style.css/signup.css
@@ -1,6 +1,6 @@
 #signup {
   margin-top: 15rem;
-  background: linear-gradient(360deg, #faaca8 2%, #f3f3f3 98%);
+  background: linear-gradient(90deg, #cba8fa 5%, #e6b8ff 90%);
 }
 
 .signup__wrapper {
