--- a/style.css/hero.css
+++ b/style.css/hero.css
@@ -7,14 +7,16 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  margin: 12rem 2rem 1rem 0;
+  /* margin: 12rem 2rem 1rem 0; */
+  width: 100%;
 }
 
 .hero__item--left {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: flex-start;
+  align-items: center;
+  width:50%;
 }
 .hero__item--left h1 {
   font-size: var(--font-xxl);
@@ -43,7 +45,12 @@
   margin: 0 1rem;
 }
 
+.hero__item--right{
+  width: 50%;
+}
+
 .hero__item--right img{
   opacity: 0.9rem;
-  height: 50rem;
+  /* height: 50rem; */
+  width: 99%;
 }
