--- a/style.css/webdevelopment.css
+++ b/style.css/webdevelopment.css
@@ -7,6 +7,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  width: 100%;
 }
 
 .web-development__text {
@@ -17,9 +18,15 @@
   border-radius: 1.5rem;
   margin-top: 5rem;
   padding: 2rem 3rem;
-  max-width: 70rem;
-  min-width: 50rem;
-  max-height: 60rem;
+  width: 50%;
+}
+
+.web-development__img{
+  width: 50%;
+}
+
+.web-development__img img{
+  width: 95%;
 }
 
 .web-development__text h5 {
