--- a/style.css/layout.css
+++ b/style.css/layout.css
@@ -20,7 +20,8 @@
   --border-radius-lg: 1.5rem;
 
   --font-s: 1.5rem;
-  --font-m: 2rem;
+  --font-m: 1.8rem;
+  --font-ml: 2.5rem;
   --font-l: 3rem;
   --font-xl: 4rem;
   --font-xxl: 7rem;
@@ -56,10 +57,10 @@ a {
 }
 
 .container {
-  width: 100%;
+  width: 1400px;
+  max-width: 90%;
   margin-right: auto;
   margin-left: auto;
-
   padding: 0 1rem;
 }
 
