--- a/style.css/signup.css
+++ b/style.css/signup.css
@@ -3,11 +3,38 @@
   background: linear-gradient(90deg, #cba8fa 5%, #e6b8ff 90%);
 }
 
+.signup__wrapper::after {
+  content: "";
+  position: absolute;
+  left: .01rem;
+  width: 100%;
+  height: 70%;
+  /* border: 1px solid red; */
+  z-index: -2;
+
+  background: rgb(245,245,245);
+background: -moz-linear-gradient(141deg, rgba(245,245,245,1) 0%, rgba(244,244,244,1) 35%, rgba(255,255,255,1) 76%, rgba(242,242,242,1) 100%);
+background: -webkit-linear-gradient(141deg, rgba(245,245,245,1) 0%, rgba(244,244,244,1) 35%, rgba(255,255,255,1) 76%, rgba(242,242,242,1) 100%);
+background: linear-gradient(141deg, rgba(245,245,245,1) 0%, rgba(244,244,244,1) 35%, rgba(255,255,255,1) 76%, rgba(242,242,242,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f5f5f5",endColorstr="#f2f2f2",GradientType=1);
+
+}
+
 .signup__wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+}
+
+.signup__image{
+  height: 48rem;
+}
+
+.signup__image img{
+  width: 45rem;
+  height: 100%;
 }
 
 .signup__text {
@@ -15,7 +42,6 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-
   border-radius: 1.5rem;
   margin-top: 5rem;
   padding: 2rem 3rem;
