--- a/style.css/webdevelopment.css
+++ b/style.css/webdevelopment.css
@@ -1,12 +1,13 @@
 #web-development {
-  margin-top: 10rem;
+padding: 5rem 0 0 0;
 }
 
 .web-development__wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  gap: 2rem;
   width: 100%;
 }
 
@@ -18,11 +19,16 @@
   border-radius: 1.5rem;
   margin-top: 5rem;
   padding: 2rem 3rem;
-  width: 50%;
+  /* width: 50%; */
+  transition: all 0.2s linear;
+}
+
+.web-development__text:hover{
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .web-development__img{
-  width: 50%;
+  /* width: 50%; */
 }
 
 .web-development__img img{
