--- a/style.css/process.css
+++ b/style.css/process.css
@@ -1,5 +1,8 @@
 #our-process {
-padding: 10rem 0 0 0;
+margin: 10rem 0 0 0;
+box-shadow: 7px 0px 34px 12px rgba(0, 0, 0, 0.1);
+opacity: 0;
+transition: all 0.3s linear;
 }
 
 .process__wrapper {
