--- a/style.css/mobile.css
+++ b/style.css/mobile.css
@@ -10,12 +10,11 @@
   justify-content: flex-start;
   align-items: center;
   gap: 15rem;
-  /* flex-wrap: wrap; */
 }
 
 .mobile__text {
   border-radius: 1.5rem;
-  /* width: 50%; */
+  width: 70rem;
   padding: 3rem;
   display: flex;
   flex-direction: column;
@@ -30,12 +29,7 @@
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.mobile__img{
-  /* width: 50%; */
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-}
+
 
 .mobile__img img{
   width: 35rem;
@@ -43,8 +37,8 @@
 
 .mobile__text h5 {
   color: var(--secondary-color);
-  font-size: var(--font-m);
-  font-weight: 150;
+  font-size: var(--font-ml);
+  font-weight: 200;
   /* padding: 0 0 3rem 0; */
 }
 
@@ -56,16 +50,20 @@
 
 .mobile__text p {
   color: var(--secondary-color);
-  font-size: var(--font-m)
+  font-size: var(--font-m);
+  width: 95%;
 }
 
 .mobile__icons {
-  font-size: 8rem;
+  font-size: 7rem;
   padding: 2rem 0;
+  margin: 0 0 0 7rem;
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
 }
 
 .mobile__icons--design {
@@ -94,4 +92,23 @@
 
 .mobile__icons--square:hover {
   transform: translateY(-1.5rem);
+}
+
+.icons__ui, .icons__native {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1.5rem;
+}
+
+.icons__ui h3, .icons__native h3{
+  font-weight: var(--font-bold);
+  font-size: var(--font-l);
+}
+
+.icons__ui p, .icons__native p{
+  font-weight: var(--font-normal);
+  font-size: var(--font-sm);
+  width: 70%;
 }
