--- a/style.css/navbar.css
+++ b/style.css/navbar.css
@@ -1,5 +1,10 @@
 #header {
   margin: 1rem 0 0 0;
+  position: sticky;
+  top: 1px;
+  z-index: 20;
+  width: 100%;
+  /* padding: 1rem; */
 }
 
 .navbar {
@@ -7,6 +12,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 1rem;
+  width: 100%;
 }
 
 .navbar__logo img {
@@ -63,3 +70,39 @@
 .navbar__demo button{
   font-size: var(--font-m);
 }
+
+
+/* burger menu */
+.burger__icon{
+  padding: .5rem 1rem;
+  border-radius: 1rem;
+  color: var(--primary-color);
+  background-color: var(--light-color);
+  display: none;
+  transition: all 0.2s linear;
+}
+
+.burger__menu{
+  position: fixed;
+  right: 50%;
+  top: 4%;
+  transform: translateX(-50%);
+  background-color: var(--light-color);
+  height: 100%;
+  /* width: 10%; */
+  z-index: 10;
+  display: none;
+  transition: all 0.3s linear;
+}
+
+.burger__nav{
+  display: flex;
+  position:relative;
+  top: 2rem;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1rem;
+  align-items: flex-start;
+  padding: 2rem
+}
+
