--- a/style.css/navbar.css
+++ b/style.css/navbar.css
@@ -4,6 +4,7 @@
   top: 1px;
   z-index: 20;
   width: 100%;
+  background: var(--light-color);
   /* padding: 1rem; */
 }
 
@@ -84,9 +85,9 @@
 
 .burger__menu{
   position: fixed;
-  right: 50%;
-  top: 4%;
-  transform: translateX(-50%);
+  right: 1%;
+  top: 6%;
+  /* transform: translateX(-50%); */
   background-color: var(--light-color);
   height: 100%;
   /* width: 10%; */
